  - ZE-GUN10 turns as fast as ZEXR-GUN.
  - All Bunkers and Decoys reload in the background.
  - Amount of wires increased by 100% for all Wire launchers.
  - Titan starts 80% reloaded instead of 40%.
  - Durability for Titan increased by 150%.
  - Requiem Gun projectile of Titan travels 200 times faster.
  - SDL1's delivery chopper will spawn instantly.
  - All SDL1 models are 50% heavier and has 200% more grip.
  - Increased durability of every Power Suit by 100%.

New Weapons:
RANGER
  - AF-W | Assault Rifle
  - EX8 | Assault Rifle
  - EX16 | Assault Rifle
  - EX32 | Assault Rifle
  - EX64 | Assault Rifle
  - Sting Shot M2 | Shotgun
  - Sting Shot M3 | Shotgun
  - Raven Shot | Shotgun
  - Dragon | Shotgun
  - Dragon M2 | Shotgun
  - Dragon M3 | Shotgun
  - Dragon's Breath | Shotgun
  - Royal Flush | Sniper
  - Omega Laser Rifle | Sniper
  - Goliath ZD | Rocket Launcher
  - MLRA-X | Missile Launcher
  - UMA-J | Grenade Launcher

WING DIVER
  - Electric Rapier | Short-Range
  - Electric Rapier 2 | Short-Range
  - Electric Rapier 3 | Short-Range
  - SIG Chainsaw | Mid-Range Laser
  - Grom-Z | Mid-Range Electric
  - Dynastrike Ω | Particle Cannos
  - Raijin Z | Sniper Weapons
  - Gleipnir ? | Special Weapons
  - Gleipnir HR | Special Weapons
  - Gleipnir-FF | Special Wewapons

FENCER
  - Striker DV | CC Strikers
  - Eruption Haken | CC Strikers
  - Screen Shield | Shield
  - Rapid Powerdyne | Artilery
  - Maximum Powerdyne | Artillery
  - Personal Guide Kit | Special
  - Personal Guide Kit M2 | Special
  - Personal Guide Kit M3 | Special
  - Focus Pointer | Special
  - Personal Guide Beacon | Special
  - Personal Guide Beacon M2 | Special
  - Personal Guide Beacon M3 | Special

AIR RAIDER
  - Napalm Plan A | Calling for Support
  - Napalm Plan B | Calling for Support
  - Napalm Plan C | Calling for Support


Weapons I don't know how to fix or if they need a fix:
  - Volcano?
  - Maybe add larger clip to Emerald
  - Eclat
  - Javelin Storm
  - Assault Beetle