@@ -62,6 +62,7 @@ AIR RAIDER
   - Requiem Gun projectile of Titan travels 200 times faster.
   - SDL1's delivery chopper will spawn instantly.
   - All SDL1 models are 50% heavier and has 200% more grip.
+  - Range of motion for Grape's cannon increased from 45 to 60 degrees.
   - Increased durability of every Power Suit by 100%.
 
 New Weapons:
